--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,67 @@ html, body {
 }
 
 
+/* Utility classes (featured across the site) */
+.container {
+    margin: auto;
+    max-width: 1000px;
+    overflow: auto;
+    padding: 0 20px;
+}
+
+
+.text-primary {
+    color: #f7c08a;
+}
+
+
+.lead {
+    font-size: 20px;
+}
+
+
+.button {
+    display: inline-block;
+    font-size: 18px;
+    color: white;
+    background: #333333;
+    padding: 13px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+
+.button-light {
+    background: #f4f4f4;
+    color: #333333;
+}
+
+
+.button:hover {
+    background: #f7c08a;
+    color: #333333;
+}
+
+
+.dark-background {
+    background: #333333;
+    color: white;
+}
+
+
+.light-background {
+    background: #f4f4f4;
+    color: #333333;
+}
+
+
+.primary-background {
+    background: #f7c08a;
+    color: white;
+}
+
+
+/* Navbar */
 a {
     color: #333;
     text-decoration: none;
@@ -37,15 +98,6 @@ nav {
     background: #333333;
     color: white;
     overflow: auto;
-
-}
-
-
-nav .container {
-    margin: auto;
-    max-width: 1000px;
-    overflow: auto;
-    padding: 0 20px;
 }
 
 
@@ -80,5 +132,83 @@ nav ul li a {
 
 nav ul li a:hover, nav ul li a.current {
     background: #444444;
-    color: #f7c0aa;
+    color: #f7c08a;
 }
+
+
+
+/* Showcase */
+#showcase {
+    background: url("../images/show-case.jpeg") no-repeat center center/cover;
+    height: 600px;
+
+}
+
+
+#showcase a {
+    color: #333333;
+    text-decoration: none;
+}
+
+
+#showcase .content {
+    color: white;
+    text-align: center;
+    padding-top: 170px;
+
+}
+
+
+#showcase .content h1 {
+    font-size: 60px;
+    line-height: 1.2em;
+
+}
+
+
+#showcase p {
+    padding-bottom: 20px;
+    line-height: 1.7em;
+}
+
+
+#showcase a {
+    color: white;
+}
+
+
+#showcase a:hover {
+    color: #333333;
+}
+
+
+/* Home Info Section */
+#home-info {
+    height: 400px;
+}
+
+
+#home-info .info-image {
+    float: left;
+    width: 50%;
+    background: url("../images/dining.jpeg") no-repeat;
+    min-height: 100%;
+
+}
+
+
+#home-info .info-content {
+    float: right;
+    width: 50%;
+    height: 100%;
+    text-align: center;
+    padding: 50px 30px;
+    overflow: hidden;
+}
+
+
+#home-info .info-content p {
+    padding-bottom: 30px;
+}
+
+
